# article-linked-lists

./: Cargo.toml  README.md
benches/: data.json  jsonschema.rs
src/: error.rs  lib.rs  paths.rs
src/keywords/: mod.rs  properties.rs  type_.rs
