[package]
name = "jsonschema"
version = "0.1.0"
edition = "2021"

[dependencies]
imbl = {version = "3", features = ["small-chunks"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = [], default-features = false }
serde = { version = "1", features = ["derive"] }

[[bench]]
harness = false
name = "jsonschema"

[profile.bench]
debug = true

